tests/idris2/error/perror006/PError.idr
foo : Int -> Int
foo x = x

bar : Int -> Int
bar x = if x == 95 then 0

baz : Int -> Int
baz x = x
